config/tools/ttk-switch/ingress.yaml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: ttk-switch-ingress
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - host: switch-ttk.beta.moja-lab.live
      http:
        paths:
          - path: /api
            backend:
              serviceName: ttk-switch-ml-testing-toolkit-backend
              servicePort: 5050 
          - path: /
            backend:
              serviceName: ttk-switch-ml-testing-toolkit-frontend
              servicePort: 6060
          - path: /socket.io/
            backend:
              serviceName: ttk-switch-ml-testing-toolkit-backend
              servicePort: 5050

    - host: switch-ttk-backend-fspiop.beta.moja-lab.live
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: ttk-switch-ml-testing-toolkit-backend
              servicePort: 5000
---
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: ttk-path
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: ttk-rewrite
spec:
  rules:
    # Also expose the switch ttk backend so that we can
    # call it from the browser without CORS issues
    - http:
        paths:
          - path: /switch-ttk-backend/(.*)
            backend:
              serviceName: ttk-switch-ml-testing-toolkit-backend
              servicePort: 5000
